--- a/promexporter-deployment2.yaml
+++ b/promexporter-deployment2.yaml
@@ -2,20 +2,24 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-prometheus-exporter
+  labels:
+    app: promexporter
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx-prometheus-exporter
+      app: promexporter
   template:
     metadata:
       labels:
-        app: nginx-prometheus-exporter
+        app: promexporter
     spec:
       containers:
       - name: nginx-prometheus-exporter
         image: nginx/nginx-prometheus-exporter:1.1.0
         args:
-        - -nginx.scrape-uri=http://nginx:8080/stub_status
+          - -nginx.scrape-uri=http://nginx:8080/metrics
         ports:
-        - containerPort: 9113
+          - containerPort: 9113
+            name: metrics
+
