--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,6 @@
-server:
-  scrape_configs:
-  - job_name: promexporter
-    static_configs:
-    - targets:
-      - promexporter.default.svc.cluster.local:9113
+USER-SUPPLIED VALUES:
+additionalScrapeConfigs:
+- jobName: promexporter
+  staticConfigs:
+  - targets:
+    - promexporter.default.svc.cluster.local:9113
